opam-version: "2.0"
name: "ppx_jsobject_conv"
synopsis: "Ppx rewriter for [@@deriving jsobject]"
description: "Ppx rewriter for [@@deriving jsobject]"
version: "0.9.0"
maintainer: "Roma Sokolov <sokolov.r.v@gmail.com>"
authors: [ "Roma Sokolov <sokolov.r.v@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/little-arhat/ppx_jsobject_conv"
bug-reports: "https://github.com/little-arhat/ppx_jsobject_conv/issues"
dev-repo: "git://github.com/little-arhat/ppx_jsobject_conv.git"
tags: [ "syntax" "jsoo" "javascript" ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "2.7"}
  "js_of_ocaml" {>= "3.8.0"}
  "ppxlib" {>= "0.26.0"}
  "webtest" {with-test}
  "webtest-js" {with-test}
]
